Indents with AOSP (4 spaces)